removed use of java records, since they're a preview feature and causing a clash with the packaging which won't allow preview features to be enabled added pipefail to bash scripts to more thoroughly catch errors version bump to 1.19 readme now communicates that monerod comes preconfigured with I2P-accessible monerod peers