@@ -1,3 +1,3 @@
 @echo off
 set DIR=%~dp0
-"%DIR%\java" -cp %DIR%\..\i2p.base\jbigi.jar -m org.getmonero.i2p.zero %*
+"%DIR%\java" --enable-preview -cp %DIR%\..\i2p.base\jbigi.jar -m org.getmonero.i2p.zero %*
